[package]
name = "https_req_tcp"
version = "0.1.0"
edition = "2021"

[dependencies]
rustls = "0.23.20"
anyhow = "1.0"
webpki-roots = "0.26.7"
rcgen = {version = "0.13.2", features = ["pem","x509-parser"]}
tokio = {version = "1.39.0", features = ["full"]}
tokio-rustls = "0.26.1"
tracing = "0.1.41"
tracing-subscriber = "0.3.17"
uuid = {version = "1.11", features = ["v4","fast-rng","macro-diagnostics"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
